# autograder

./: .gitignore  AutoGrader_Module.ipynb  README.md  pyproject.toml
archive/: AutoGrader_Module._archives.ipynb
src/: AutoGrade_getLastCell.ipynb  AutoGrader_Module.ipynb
src/autograder/: grader.py  grading.py  io_utils.py  label_tagging.py  nb_utils.py  paths.py  policy.py  report.py  similarity.py
src/autograder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/autograder/configs/: sessions.toml
